:hammer: use npm mode for tnpm and cnpm

--- a/package.json
+++ b/package.json
@@ -60,5 +60,11 @@
   "peerDependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
+  },
+  "cnpm": {
+    "mode": "npm"
+  },
+  "tnpm": {
+    "mode": "npm"
   }
 }
