--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/classnames": "^2.2.9",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
+    "@umijs/fabric": "^1.1.10",
     "coveralls": "^3.0.6",
     "cross-env": "^6.0.0",
     "enzyme": "^3.0.0",
