--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
   "license": "MIT",
   "scripts": {
     "start": "cross-env NODE_ENV=development father doc dev --storybook",
-    "build": "father doc build  --storybook",
+    "build": "father doc build --storybook",
     "compile": "father build && lessc assets/index.less assets/index.css",
-    "gh-pages": "father doc deploy",
-    "prepublishOnly": "npm run compile && np --no-cleanup --yolo --no-publish",
+    "gh-pages": "npm run build && father doc deploy",
+    "prepublishOnly": "npm run compile && np --no-cleanup --yolo --no-publish && npm run gh-pages",
     "lint": "eslint src/ --ext .ts,.tsx,.jsx,.js,.md",
     "prettier": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "test": "npm run lint && father test",
