--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rc-footer",
   "version": "0.1.0",
-  "description": "Footer component used in ant.design",
+  "description": "Pretty Footer react component used in used in ant.design",
   "keywords": [
     "react",
     "react-component",
