--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "antd",
     "ant-design"
   ],
-  "main": "lib/index",
+  "main": "./lib/index",
   "module": "./es/index",
   "files": [
     "assets/*.css",
+    "assets/*.less",
     "es",
-    "lib"
+    "lib",
+    "dist"
   ],
   "homepage": "https://react-component.github.io/footer",
   "repository": {
@@ -51,6 +53,7 @@
     "enzyme-adapter-react-16": "^1.0.1",
     "enzyme-to-json": "^3.4.0",
     "father": "^2.13.4",
+    "less": "^3.10.3",
     "np": "^5.1.0",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.0",
