--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "enzyme": "^3.0.0",
     "enzyme-adapter-react-16": "^1.0.1",
     "enzyme-to-json": "^3.4.0",
+    "eslint": "^6.6.0",
     "father": "^2.13.4",
     "husky": "^3.0.9",
     "less": "^3.10.3",
