--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
   },
   "license": "MIT",
   "scripts": {
-    "start": "cross-env NODE_ENV=development father doc dev --storybook",
-    "build": "father doc build --storybook",
+    "start": "dumi dev",
+    "docs:build": "dumi build",
+    "docs:deploy": "gh-pages -d .doc",
     "compile": "father build && lessc assets/index.less assets/index.css",
     "gh-pages": "npm run build && father doc deploy",
     "prepublishOnly": "npm run compile && np --yolo --no-publish && npm run gh-pages",
@@ -51,11 +52,14 @@
     "@umijs/fabric": "^2.0.8",
     "coveralls": "^3.0.6",
     "cross-env": "^7.0.2",
+    "dumi": "^1.1.0",
     "enzyme": "^3.0.0",
     "enzyme-adapter-react-16": "^1.0.1",
     "enzyme-to-json": "^3.4.0",
     "eslint": "^7.0.0",
     "father": "^2.13.4",
+    "father-build": "^1.18.6",
+    "gh-pages": "^3.1.0",
     "husky": "^4.2.5",
     "less": "^3.10.3",
     "np": "^7.0.0",
@@ -63,7 +67,8 @@
     "pretty-quick": "^3.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-test-renderer": "^16.0.0"
+    "react-test-renderer": "^16.0.0",
+    "typescript": "^4.0.5"
   },
   "peerDependencies": {
     "react": "^16.0.0",
