--- a/package.json
+++ b/package.json
@@ -71,8 +71,8 @@
     "typescript": "^4.0.5"
   },
   "peerDependencies": {
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react": ">=16.0.0",
+    "react-dom": ">=16.0.0"
   },
   "husky": {
     "hooks": {
