--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-.storybook
 *.iml
 *.log
 .idea/
@@ -30,8 +29,8 @@ package-lock.json
 coverage/
 .doc
 
-# umi
-.umi
-.umi-production
-.umi-test
-.env.local 
+# dumi
+.dumi/tmp
+.dumi/tmp-test
+.dumi/tmp-production
+.env.local
