--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "docs:build": "dumi build",
     "docs:deploy": "gh-pages -d .doc",
     "compile": "father build && lessc assets/index.less assets/index.css",
+    "prepare": "husky install && dumi setup",
     "gh-pages": "npm run docs:build && father doc deploy",
     "prepublishOnly": "npm run compile && np --yolo --no-publish && npm run gh-pages",
     "lint": "eslint src/ --ext .ts,.tsx,.jsx,.js,.md",
@@ -46,21 +47,22 @@
     "classnames": "^2.2.1"
   },
   "devDependencies": {
+    "@rc-component/father-plugin": "^1.0.0",
     "@types/classnames": "^2.2.9",
     "@types/react": "^17.0.13",
     "@types/react-dom": "^16.9.0",
     "@umijs/fabric": "^2.0.8",
     "coveralls": "^3.0.6",
     "cross-env": "^7.0.2",
-    "dumi": "^1.1.0",
+    "dumi": "^2.0.0",
     "enzyme": "^3.0.0",
     "enzyme-adapter-react-16": "^1.0.1",
     "enzyme-to-json": "^3.4.0",
     "eslint": "^7.0.0",
-    "father": "^2.13.4",
-    "father-build": "^1.18.6",
+    "father": "^4.0.0",
     "gh-pages": "^3.1.0",
-    "husky": "^4.2.5",
+    "glob": "^10.0.0",
+    "husky": "^8.0.3",
     "less": "^3.10.3",
     "np": "^7.0.0",
     "prettier": "^2.0.5",
@@ -68,7 +70,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-test-renderer": "^16.0.0",
-    "typescript": "^4.0.5"
+    "typescript": "^5.0.0"
   },
   "peerDependencies": {
     "react": ">=16.0.0",
