--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "lint": "eslint src/ --ext .ts,.tsx,.jsx,.js,.md",
     "prettier": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "pretty-quick": "pretty-quick",
-    "test": "father test",
-    "coverage": "father test --coverage"
+    "test": "rc-test",
+    "coverage": "rc-test --coverage"
   },
   "dependencies": {
     "@babel/runtime": "^7.11.1",
@@ -56,7 +56,7 @@
     "cross-env": "^7.0.2",
     "dumi": "^2.0.0",
     "enzyme": "^3.0.0",
-    "enzyme-adapter-react-16": "^1.0.1",
+    "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.4.0",
     "eslint": "^7.0.0",
     "father": "^4.0.0",
@@ -67,9 +67,9 @@
     "np": "^7.0.0",
     "prettier": "^2.0.5",
     "pretty-quick": "^3.0.0",
+    "rc-test": "^7.0.15",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-test-renderer": "^16.0.0",
     "typescript": "^5.0.0"
   },
   "peerDependencies": {
