--- a/package.json
+++ b/package.json
@@ -51,8 +51,9 @@
     "@types/classnames": "^2.2.9",
     "@types/react": "^17.0.13",
     "@types/react-dom": "^16.9.0",
+    "@types/enzyme": "^3.10.18",
+    "@types/jest": "^29.5.12",
     "@umijs/fabric": "^2.0.8",
-    "coveralls": "^3.0.6",
     "cross-env": "^7.0.2",
     "dumi": "^2.0.0",
     "enzyme": "^3.0.0",
@@ -68,9 +69,9 @@
     "prettier": "^2.0.5",
     "pretty-quick": "^3.0.0",
     "rc-test": "^7.0.15",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "typescript": "^5.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "^5.2.2"
   },
   "peerDependencies": {
     "react": ">=16.0.0",
