lock cheerio to 1.0.0-rc.12

--- a/package.json
+++ b/package.json
@@ -49,11 +49,12 @@
   "devDependencies": {
     "@rc-component/father-plugin": "^1.0.0",
     "@types/classnames": "^2.2.9",
-    "@types/react": "^17.0.13",
-    "@types/react-dom": "^16.9.0",
     "@types/enzyme": "^3.10.18",
     "@types/jest": "^29.5.12",
+    "@types/react": "^17.0.13",
+    "@types/react-dom": "^16.9.0",
     "@umijs/fabric": "^2.0.8",
+    "cheerio": "1.0.0-rc.12",
     "cross-env": "^7.0.2",
     "dumi": "^2.0.0",
     "enzyme": "^3.0.0",
