--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,21 @@
 {
   "compilerOptions": {
     "target": "esnext",
+    "module": "ESNext",
     "moduleResolution": "node",
     "baseUrl": "./",
-    "jsx": "preserve",
-    "declaration": true,
-    "skipLibCheck": true,
+    "lib": ["dom", "es2017"],
+    "jsx": "react",
+    "strict": true,
     "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "skipLibCheck": true,
+    "declaration": true,
     "paths": {
-      "@/*": [
-        "src/*"
-      ],
-      "@@/*": [
-        ".dumi/tmp/*"
-      ],
-      "rc-footer": [
-        "src/index.ts"
-      ]
-    },
+      "@/*": ["src/*"],
+      "@@/*": [".dumi/tmp/*"],
+      "rc-footer": ["src/index.tsx"]
+    }
   }
 }
