--- a/package.json
+++ b/package.json
@@ -30,53 +30,51 @@
   "license": "MIT",
   "scripts": {
     "start": "dumi dev",
+    "type:check": "tsc --noEmit",
     "docs:build": "dumi build",
     "docs:deploy": "gh-pages -d .doc",
     "compile": "father build && lessc assets/index.less assets/index.css",
-    "prepare": "husky install && dumi setup",
-    "gh-pages": "npm run docs:build && father doc deploy",
+    "gh-pages": "GH_PAGES=1 npm run docs:build && npm run docs:deploy",
     "prepublishOnly": "npm run compile && np --yolo --no-publish && npm run gh-pages",
     "lint": "eslint src/ --ext .ts,.tsx,.jsx,.js,.md",
     "prettier": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "pretty-quick": "pretty-quick",
-    "test": "rc-test",
-    "coverage": "rc-test --coverage"
+    "test": "jest",
+    "coverage": "jest --coverage",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@babel/runtime": "^7.11.1",
     "classnames": "^2.2.1"
   },
   "devDependencies": {
-    "@rc-component/father-plugin": "^1.0.0",
+    "@rc-component/father-plugin": "^1.0.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.2.1",
     "@types/classnames": "^2.2.9",
-    "@types/enzyme": "^3.10.18",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "^29.2.4",
     "@types/react": "^17.0.13",
     "@types/react-dom": "^16.9.0",
-    "@umijs/fabric": "^2.0.8",
-    "cheerio": "1.0.0-rc.12",
-    "cross-env": "^7.0.2",
-    "dumi": "^2.0.0",
-    "enzyme": "^3.0.0",
-    "enzyme-adapter-react-16": "^1.15.6",
-    "enzyme-to-json": "^3.4.0",
+    "@umijs/fabric": "^3.0.0",
+    "@umijs/test": "^4.0.36",
+    "coveralls": "^3.0.6",
+    "cross-env": "^7.0.3",
+    "cssstyle": "^2.3.0",
+    "dumi": "^2.1.2",
     "eslint": "^7.0.0",
-    "father": "^4.0.0",
+    "father": "^4.1.1",
     "gh-pages": "^3.1.0",
-    "glob": "^10.0.0",
-    "husky": "^8.0.3",
+    "husky": "^8.0.0",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "less": "^3.10.3",
     "np": "^7.0.0",
     "prettier": "^2.0.5",
     "pretty-quick": "^3.0.0",
-    "rc-test": "^7.0.15",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "typescript": "^5.2.2"
-  },
-  "peerDependencies": {
-    "react": ">=16.0.0",
-    "react-dom": ">=16.0.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.0"
   },
   "husky": {
     "hooks": {
