--- a/package.json
+++ b/package.json
@@ -53,12 +53,13 @@
     "@testing-library/react": "^14.3.1",
     "@types/classnames": "^2.3.1",
     "@types/jest": "^29.5.12",
+    "@types/node": "^22.2.0",
     "@types/react": "^17.0.80",
     "@types/react-dom": "^16.9.24",
     "@umijs/fabric": "^4.0.0",
     "@umijs/test": "^4.3.12",
     "dumi": "^2.4.7",
-    "eslint": "^7.32.0",
+    "eslint": "^8.57.0",
     "father": "^4.5.0",
     "gh-pages": "^3.2.3",
     "husky": "^8.0.3",
