--- a/package.json
+++ b/package.json
@@ -30,51 +30,49 @@
   "license": "MIT",
   "scripts": {
     "start": "dumi dev",
+    "type:check": "tsc --noEmit",
     "docs:build": "dumi build",
     "docs:deploy": "gh-pages -d .doc",
     "compile": "father build && lessc assets/index.less assets/index.css",
-    "prepare": "husky install && dumi setup",
-    "gh-pages": "npm run docs:build && father doc deploy",
+    "gh-pages": "GH_PAGES=1 npm run docs:build && npm run docs:deploy",
     "prepublishOnly": "npm run compile && np --yolo --no-publish && npm run gh-pages",
     "lint": "eslint src/ --ext .ts,.tsx,.jsx,.js,.md",
     "prettier": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "pretty-quick": "pretty-quick",
-    "test": "rc-test",
-    "coverage": "rc-test --coverage"
+    "test": "jest",
+    "coverage": "jest --coverage",
+    "prepare": "husky install"
   },
   "dependencies": {
-    "@babel/runtime": "^7.11.1",
-    "classnames": "^2.2.1"
+    "@babel/runtime": "^7.25.0",
+    "classnames": "^2.5.1"
   },
   "devDependencies": {
-    "@rc-component/father-plugin": "^1.0.0",
-    "@types/classnames": "^2.2.9",
-    "@types/react": "^17.0.13",
-    "@types/react-dom": "^16.9.0",
-    "@umijs/fabric": "^2.0.8",
-    "coveralls": "^3.0.6",
-    "cross-env": "^7.0.2",
-    "dumi": "^2.0.0",
-    "enzyme": "^3.0.0",
-    "enzyme-adapter-react-16": "^1.15.6",
-    "enzyme-to-json": "^3.4.0",
-    "eslint": "^7.0.0",
-    "father": "^4.0.0",
-    "gh-pages": "^3.1.0",
-    "glob": "^10.0.0",
+    "@rc-component/father-plugin": "^1.0.3",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.3.1",
+    "@types/classnames": "^2.3.1",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^22.2.0",
+    "@types/react": "^17.0.80",
+    "@types/react-dom": "^16.9.24",
+    "@umijs/fabric": "^4.0.0",
+    "@umijs/test": "^4.3.12",
+    "dumi": "^2.4.7",
+    "eslint": "^8.57.0",
+    "father": "^4.5.0",
+    "gh-pages": "^3.2.3",
     "husky": "^8.0.3",
-    "less": "^3.10.3",
-    "np": "^7.0.0",
-    "prettier": "^2.0.5",
-    "pretty-quick": "^3.0.0",
-    "rc-test": "^7.0.15",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "typescript": "^5.0.0"
-  },
-  "peerDependencies": {
-    "react": ">=16.0.0",
-    "react-dom": ">=16.0.0"
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "less": "^4.2.0",
+    "np": "^7.7.0",
+    "prettier": "^3.3.3",
+    "pretty-quick": "^4.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
   },
   "husky": {
     "hooks": {
