--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: oven-sh/setup-bun@v2
       - run: bun i
       - run: bun run lint
-      - run: bun run tsx --noEmit
+      - run: bunx tsx --noEmit
       - run: bun run compile
       - run: npm test -- --coverage
       - uses: codecov/codecov-action@v4
