--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,18 +1,6 @@
-name: ✅ test
-
-on: ['push', 'pull_request']
-
+name: CI
+on: [push, pull_request]
 jobs:
-  setup:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: oven-sh/setup-bun@v2
-      - run: bun i
-      - run: bun run lint
-      - run: bunx tsc --noEmit
-      - run: bun run compile
-      - run: npm test -- --coverage
-      - uses: codecov/codecov-action@v4
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+  CI:
+    uses: react-component/rc-test/.github/workflows/test.yml@main
+    secrets: inherit
