--- a/package.json
+++ b/package.json
@@ -44,34 +44,39 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@babel/runtime": "^7.25.0",
+    "@babel/runtime": "^7.28.4",
     "clsx": "^2.1.1"
   },
   "devDependencies": {
-    "@rc-component/father-plugin": "^1.0.3",
-    "@testing-library/jest-dom": "^6.6.3",
+    "@rc-component/father-plugin": "^1.1.0",
+    "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
     "@types/jest": "^30.0.0",
     "@types/node": "^25.0.3",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
-    "@umijs/fabric": "^4.0.0",
-    "@umijs/test": "^4.3.12",
-    "dumi": "^2.4.7",
-    "eslint": "^8.57.0",
-    "father": "^4.5.0",
+    "@umijs/fabric": "^4.0.1",
+    "@umijs/test": "^4.6.15",
+    "dumi": "^2.4.21",
+    "eslint": "^8.57.1",
+    "father": "^4.6.13",
     "gh-pages": "^3.2.3",
     "husky": "^8.0.3",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "less": "^4.2.0",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "less": "^4.5.1",
     "np": "^10.2.0",
-    "prettier": "^3.3.3",
-    "pretty-quick": "^4.0.0",
+    "prettier": "^3.7.4",
+    "pretty-quick": "^4.2.2",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "sass": "^1.97.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.9.3"
+  },
+  "peerDependencies": {
+    "react": ">=18.0.0",
+    "react-dom": ">=18.0.0"
   },
   "husky": {
     "hooks": {
